--- a/dist.ini
+++ b/dist.ini
@@ -11,3 +11,5 @@ copyright_holder=Steven Haryanto
 [Prereqs]
 ;!lint-prereqs assume-used # base spec
 DefHash=1.0.4
+;!lint-prereqs assume-used # base spec
+Sah=0.9.30
