Rename dist {SHARYANTO-,}TableSpec

--- a/dist.ini
+++ b/dist.ini
@@ -1,6 +1,6 @@
 version=1.0.2
 
-name=SHARYANTO-TableSpec
+name=TableSpec
 author=Steven Haryanto <stevenharyanto@gmail.com>
 license=Perl_5
 copyright_holder=Steven Haryanto
