Rename dist SHARYANTO-TableSpec -> TableDef

--- a/dist.ini
+++ b/dist.ini
@@ -1,6 +1,6 @@
-version=1.0.2
+version=1.0.3
 
-name=TableSpec
+name=TableDef
 author=Steven Haryanto <stevenharyanto@gmail.com>
 license=Perl_5
 copyright_holder=Steven Haryanto
