[dzil] Update syntax of lint-prereqs directive (-> lint_prereqs) to be more IOD-compliant

--- a/dist.ini
+++ b/dist.ini
@@ -6,7 +6,7 @@ name=TableDef
 :version=0.23
 
 [Prereqs]
-;!lint-prereqs assume-used # base spec
+;!lint_prereqs assume-used # base spec
 DefHash=1.0.4
-;!lint-prereqs assume-used # base spec
+;!lint_prereqs assume-used # base spec
 Sah=0.9.30
