--- a/dist.ini
+++ b/dist.ini
@@ -6,6 +6,8 @@ name=TableDef
 :version=0.23
 
 [Prereqs]
+
+[Prereqs / DevelopRecommends]
 ;!lint_prereqs assume-used # base spec
 DefHash=1.0.4
 ;!lint_prereqs assume-used # base spec
