[dist] Re-pass lint-prereqs (core modules must now be listed)

--- a/dist.ini
+++ b/dist.ini
@@ -6,9 +6,12 @@ name=TableDef
 :version=0.23
 
 [Prereqs]
+strict=0
+warnings=0
 
 [Prereqs / DevelopRecommends]
 ;!lint_prereqs assume-used # base spec
 DefHash=1.0.4
 ;!lint_prereqs assume-used # base spec
 Sah=0.9.30
+
