--- a/dist.ini
+++ b/dist.ini
@@ -9,9 +9,6 @@ name=TableDef
 strict=0
 warnings=0
 
-[Prereqs / DevelopRecommends]
-;!lint_prereqs assume-used # base spec
-DefHash=1.0.4
-;!lint_prereqs assume-used # base spec
-Sah=0.9.30
-
+[Prereqs / DevelopSuggests]
+_SPEC::DefHash=1.0.4
+_SPEC::Sah=0.9.30
