[dist] Fix expressing follow-spec prereq relationship with x_spec

--- a/dist.ini
+++ b/dist.ini
@@ -9,6 +9,8 @@ name=TableDef
 strict=0
 warnings=0
 
-[Prereqs / DevelopSuggests]
-_SPEC::DefHash=1.0.4
-_SPEC::Sah=0.9.30
+[Prereqs / DevelopX_spec]
+-phase=develop
+-relationship=x_spec
+DefHash=1.0.4
+Sah=0.9.30
